fix: chapter index not visible | PM-11581

--- a/folioreader/src/main/assets/css/Style.css
+++ b/folioreader/src/main/assets/css/Style.css
@@ -207,7 +207,7 @@ html.nightMode {
     background-color: #131313 !important;
 }
 
-.nightMode p, .nightMode div {
+.nightMode p, .nightMode div, .nightMode a {
     color: #767676 !important;
     background-color: transparent !important;
 }
